--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="./main.js"></script>
   <script>
     $(function(){
-      $carousel.show();        
+      $carousel.slide();        
     })
   </script>
 </html>
